update3：input的拓展及美化
1：增加了对register页面的input的输入正确性检测。
2：input的选填、必填、不允许操作进行输入框进行边框及检测后边框样式设置。
3：增加了性别选项框（可以向后台提交数据）
4：设置全局服务器字体：新叶恋体

--- a/css/register.css
+++ b/css/register.css
@@ -1,10 +1,44 @@
 /*CSS document*/
+@font-face{
+    font-family:ziti;
+    src: url(/font/新叶恋体-100font.com/新叶念体.otf);
+}
+
+body{
+    font-family: ziti;
+    font-size: x-large;
+}
+
 form{
     margin-top: 100px;
     border: 100px;
     border-color: coral;
 }
-label{
-	margin-top: 10px;
-	margin-bottom: 10px;
+
+/*表单输入框样式更改*/
+input{
+    outline: none;
+    border-radius: 10px;
+}
+
+/*input必填和非必填提示*/
+input:disabled{
+    border: 1.5px solid darkgrey;
+}
+
+input:required{
+    border: 1.5px solid red;
+}
+
+input:optional{
+    border: 1.5px solid lightgreen;
+}
+
+/*表单项输入验证*/
+input:valid{
+    background-color: yellowgreen;
+}
+
+input:invalid{
+    background-color: red;
 }
