Update5:新的文件添加

--- a/css/page.css
+++ b/css/page.css
@@ -1,6 +1,7 @@
 /* CSS Document */
-.bfcl{
-	background-color: lightgoldenrodyellow;
+@font-face{
+	font-family:清松手写体1;
+	src: url(/font/清松手写体-100font.com/清松手写体1.ttf)
 }
 div{
 	text-align: center;
@@ -10,7 +11,6 @@ h3{
 	font-family:清松手写体1;
 	font-size: 30px;
 }
-@font-face{
-	font-family:清松手写体1;
-	src: url(/font/清松手写体-100font.com/清松手写体1.ttf)
+.a{
+	text-decoration: none;
 }
