--- a/css/page.css
+++ b/css/page.css
@@ -1,16 +1,23 @@
 /* CSS Document */
-@font-face{
-	font-family:清松手写体1;
+@font-face {
+	font-family: 清松手写体1;
 	src: url(/font/清松手写体-100font.com/清松手写体1.ttf)
 }
-div{
+
+body {
+	background-color: cornflowerblue;
+}
+
+div {
 	text-align: center;
 	text-decoration: none;
 }
-h3{
-	font-family:清松手写体1;
+
+h3 {
+	font-family: 清松手写体1;
 	font-size: 30px;
 }
-.a{
+
+.a {
 	text-decoration: none;
 }
